--- a/hw5/style.css
+++ b/hw5/style.css
@@ -2,8 +2,11 @@ button{
     background-color:rgb(34, 105, 185)
 }
 form{
-    background-color: aqua;
+    background-color:rgb(0, 255, 242);
 }
-form.calculator{
-    color:brown;
+::placeholder{
+    color: black;
+}
+input[type=text]{
+    background-color: gray;
 }
